--- a/mobile/package.json
+++ b/mobile/package.json
@@ -16,6 +16,7 @@
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/native": "^6.1.7",
     "@supabase/supabase-js": "^2.38.4",
+    "axios": "^1.7.3",
     "expo": "^51.0.24",
     "expo-constants": "~16.0.1",
     "expo-linking": "~6.3.1",
