--- a/mobile/package.json
+++ b/mobile/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/native": "^6.1.7",
     "@supabase/supabase-js": "^2.38.4",
     "axios": "^1.7.3",
+    "date-fns": "^3.6.0",
     "expo": "^51.0.24",
     "expo-constants": "~16.0.1",
     "expo-linking": "~6.3.1",
