--- a/mobile/package.json
+++ b/mobile/package.json
@@ -13,8 +13,9 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
-    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-navigation/native": "^6.1.7",
+    "@reduxjs/toolkit": "^2.2.7",
     "@supabase/supabase-js": "^2.38.4",
     "axios": "^1.7.3",
     "date-fns": "^3.6.0",
@@ -33,7 +34,9 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
-    "react-native-web": "~0.19.10"
+    "react-native-web": "~0.19.10",
+    "react-redux": "^9.1.2",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
