--- a/web/package.json
+++ b/web/package.json
@@ -11,7 +11,10 @@
   },
   "dependencies": {
     "axios": "^1.7.3",
+    "i": "^0.3.7",
+    "npm": "^10.8.2",
     "react": "^18.3.1",
+    "react-apexcharts": "^1.4.1",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
